--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,8 +8,8 @@ sidebar:
 
     # Profile information
     name: Charlie Dalldorf
-    tagline: Software Engineer
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    tagline: Software Developer
+    avatar: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: charlie.dalldorf@gmail.com
@@ -20,58 +20,15 @@ sidebar:
     github: charliedalldorf
     pdf: http://www.africau.edu/images/default/sample.pdf
 
-    # languages:
-    #   title: Languages
-    #   info:
-    #     - idiom: English
-    #       level: Native
-
-    # interests:
-    #   title: Interests
-    #   info:
-    #     - item: Powerlifting
-    #       link:
-
-    #     - item: Painting
-    #       link:
-
-    #     - item: Cooking
-    #       link:
-
-career-profile:
-    title: Career Profile
-    summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
 education:
     title: Education
     info:
       - degree: Masters of Arts in Communications
         university: University of South Dakota
         time: 2015 - 2017
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
       - degree: Bachelors of Science in Journalism
         university: University of South Dakota
         time: 2012 - 2015
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
 experiences:
     title: Experience
     info:
@@ -79,84 +36,42 @@ experiences:
         time: 2022 - Present
         company: First Interstate Bank
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
-      - role: Software Engineer
+          Manage and adminstrate our Github, SQL Server and Power BI environments.
+            - Lead the effort on developing our Github environment,
+              implementing Trunk-Based Development Branching Strategy,
+              and automating our CI / CD pipelines.
+            - Constructed documentation, diagrams and SOPs on change management for yearly SOX Audits.
+      - role: Software Developer II
         time: 2019 - 2022
         company: Great Western Bank
         details: |
-          Developed applications, reports and automated jobs using .NET, Python and T-SQL.
-
+          Constructed applications and reports to support financial business units
+          for federal regulation and validation.
+          Technologies used are .NET, Python and T-SQL.
             - Reduced time for deliverables by 70% using CI/CD pipelines with unit testing and automated deployments.
-            - Bullet point
+            - Increased branch banker effciency and reducation in errors by 90% with enterprise web applications.
       - role: Business Intelligence Analyst
         time: 2017 - 2019
         company: South Dakota Department of Education
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
+          Implement the US Department of Education's Every Student Succeeds Act across the State of South Dakota.
+          Created the Accountability Report Card using .NET, Microstrategy and T-SQL.
             - Designed and implemented the South Dakota Accountability Report Card
-            - Bullet point
+            - Create stored procedures to analyze, visualize and report student data to stakeholders and third party researchers.
 projects:
     title: Projects
-    intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+      - title: Standard Switch
+        link: "https://www.standardswitch.com/"
+        tagline: "Progressive Web App to compare and contrast mechanical keyboard switches."
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
+      - title: Mango Bytes
+        link: "https://nextjs-blog-ecru-omega.vercel.app/"
+        tagline: "Personal Blog exploring databases, data visualization and other topics."
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-# publications:
-#     title: Publications
-#     intro: |
-#       You can list your publications in this section. Lorem ipsum dolor sit
-#       amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-#       bibendum fringilla a eu lectus.
-#     papers:
-#       - title: The Art of Computer Programming
-#         link: "#"
-#         authors: Donald E. Knuth
-#         conference: Addison-Wesley, 1968
-
-#       - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-#         link: "#"
-#         authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-#         conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-#       - title: A syntax directed compiler for Algol 60
-#         link: "#"
-#         authors: Edgar T. Irons
-#         conference: "Comm. ACM 4 (1961), 51–55"
+      - title: South Dakota Accountability Report Card
+        link: "https://sdschools.sd.gov"
+        tagline: "Statewide Student Report Card for South Dakota that reports academic performance indicators."
 
 skills:
     title: Skills &amp; Proficiency
