--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: azure/login@v1
       with:
-          creds: ${{ secrets.AZURE_CREDENTIALS 
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
           
     - name: Upload to blob storage
       uses: azure/CLI@v1
