--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-           az cdn endpoint purge --content-paths  "/_site/*" --profile-name "cdn-crc" --name "crc" --resource-group "cloud-resume-challenge-sox"
+           az cdn endpoint purge --content-paths  "./_site/*" --profile-name "cdn-crc" --name "crc" --resource-group "cloud-resume-challenge-sox"
            
   # Azure logout
     - name: logout
